Pruna APIs integration
